# fgns

./: .gitignore  CMakeLists.txt  README.md  fgns.cc
core/: cat.cc  core_utils.cc  cp.cc  decrypt.cc  encrypt.cc  exists.cc  fexport.cc  import.cc  importdir.cc  info.cc  internals.cc  ls.cc  magic.cc  mv.cc  rm.cc  touch.cc  write.cc
core/flat/: cat.cc  cd.cc  cp.cc  decrypt.cc  encrypt.cc  exists.cc  exportdir.cc  fexport.cc  import.cc  importdir.cc  info.cc  io.cc  ls.cc  magic.cc  misc.cc  mkdir.cc  mv.cc  rm.cc  touch.cc  write.cc
crypto/: str_crypto.cc
include/: core_internals.h  core_types.h  core_utils.h  flat.h  flat_types.h  flat_utils.h
include/crypto/: str_crypto.h
libs/: build_lzma_linux.sh
misc/: getdeps.sh  str_crypto.cpp  str_crypto.hpp  xz_decode.cpp  xz_encode.cpp
xz/: decode.cpp  encode.cpp
